# crucible

./: .gitignore  LICENSE  PLAN.md  README.md  ROADMAP.md  STATUS.md  ai-sast-market-research.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
evals/: README.md
evals/fixtures/exploit/: command_exploitable.py  cross_function_command.py  cross_function_eval.py  eval_exploitable.py  not_execution_sink.py
evals/fixtures/interproc/: cross_safe.py  cross_sqli.py  manifest.json  two_hop_cmdi.py
evals/fixtures/synthetic/: manifest.json  safe.py  sqli.py
evals/fixtures/taint_corpus/: manifest.json
skills/auth-bypass/: SKILL.md
skills/broken-access-control/: SKILL.md
skills/business-logic/: SKILL.md
skills/code-injection/: SKILL.md
skills/command-injection/: SKILL.md
skills/csrf/: SKILL.md
skills/dom-xss/: SKILL.md
skills/insecure-deserialization/: SKILL.md
skills/insecure-llm-output/: SKILL.md
skills/open-redirect/: SKILL.md
skills/path-traversal/: SKILL.md
skills/sql-injection/: SKILL.md
skills/ssrf/: SKILL.md
skills/ssti/: SKILL.md
skills/xxe/: SKILL.md
src/crucible/: __init__.py  budget.py  cli.py
src/crucible/agents/: __init__.py  semantic.py  severity.py
tests/: test_agents.py  test_budget.py  test_consensus.py  test_corpus.py  test_crossfile.py  test_evals.py  test_exploit.py  test_gates.py  test_interproc.py  test_patterns.py  test_pipeline.py  test_poc_gate.py  test_sandbox.py  test_schema.py  test_skills.py  test_taint.py
tests/integration/: test_live_anthropic.py  test_live_semantic.py
(+64 files in other folders)
