[project]
name = "crucible-sast"
version = "0.0.1"
description = "Crucible — a language-agnostic, best-of-breed AI-SAST engine where findings are forged and tested under fire until proven."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Akshansh Jaiswal" }]
keywords = ["sast", "security", "static-analysis", "ai", "llm", "vulnerability"]
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
crucible = "crucible.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
